--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "guzzlehttp/guzzle": "^7.2",
     "digitickets/lalit": "^3.1",
     "nasext/visual-paginator": "^4.0",
-    "ublaboo/datagrid": "^6.2"
+    "ublaboo/datagrid": "^6.2",
+    "suin/php-rss-writer": "^1.6"
   },
   "require-dev": {
     "nette/tester": "^2.0",
