Posílání mailu s adresou

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   "require": {
     "php": ">= 7.4",
     "ext-dom": "*",
+    "ext-json": "*",
     "nette/application": "^3.0",
     "nette/bootstrap": "^3.0",
     "nette/caching": "^3.0",
